--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".NutritionalInfoActivity"></activity>
         <activity android:name=".MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SuggestedRecipesActivity">
-        </activity>
+        <activity android:name=".SuggestedRecipesActivity"></activity>
         <activity android:name=".PresentationActivity" />
         <activity
             android:name=".FoodsFoundCameraActivity"
@@ -31,8 +32,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".NutricionalInfoActivity" />
         <activity android:name=".RecipeActivity" />
-        <activity android:name=".StartActivity">
-        </activity>
+        <activity android:name=".StartActivity"></activity>
         <activity android:name=".RecipeByIngredientActivity" />
         <activity android:name=".RecipeByCategoryActivity" />
         <activity
