Arreglos varios3. Terminada para entrega.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".RecipesScrollingActivity"></activity>
         <activity android:name=".NutritionalInfoActivity" />
-        <activity android:name=".MenuActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MenuActivity" />
         <activity android:name=".SuggestedRecipesActivity" />
         <activity android:name=".PresentationActivity" />
         <activity
@@ -32,7 +26,13 @@
             android:label="@string/title_activity_foods_found_camera"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RecipeActivity" />
-        <activity android:name=".StartActivity" />
+        <activity android:name=".StartActivity" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".ScrollingActivity"
             android:label="@string/title_activity_scrolling"
